
changes:

///////////////////////////////////////
// 9/26/22

fixed unreferenced warnings from eslint

CountTracker.js
Made setsCount a sticky state variable in CountTracker
Added setsCount to settings dialog
Separated useEffect for currentDelayTick and currentTick into
    separate functions - didn't work correctly with both dependencies

useSetCoundown.js
moved the useEffect[delayCoundownCompleted] function to before
    useEffect[timeCoundownCompleted]
removed cancelTimeCountdown() call from startCountdown()
set setsRemaining to -1 in cancelCountdown()

useTimeCountdown.js
in cancelCountdown(), setCurrentTick to -1


still getting negative setsRemaining state when saving source files while server running
doesn't seem to cancel properly when delay counter is goiong




[eslint] 
src\CountTracker.js
                                                          no-unused-vars   
                                                          eqeqeq
  Line 35:8:   React Hook useEffect has a missing dependency: 'playTick'. Either include it or remove the dependency array           react-hooks/exhaustive-deps
  Line 42:8:   React Hook useEffect has a missing dependency: 'playIntervalEnded'. Either include it or remove the dependency array  react-hooks/exhaustive-deps
  Line 44:12:  'playStartButtonClicked' is assigned a value but never used 
                                                          no-unused-vars   
  Line 49:12:  'playStopButtonClicked' is assigned a value but never used  
                                                          no-unused-vars   

src\hooks\useSetCountdown.js
  Line 9:76:  'cancelDelayCountdown' is assigned a value but never used    


                                 no-unused-vars